packages/beff-wasm/fixtures/errors/star-pattern/router.ts
export default {
  [`/hello/*`]: {
    get: async (): Promise<string> => {
      return "test";
    },
  },
};
